# Risk-Intelligence-Suite

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/accounts/: accounts.controller.ts  accounts.module.ts  accounts.service.ts
backend/src/accounts/schemas/: account.schema.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/clients/: clients.controller.ts  clients.module.ts  clients.service.ts
backend/src/credit-applications/: credit-applications.controller.ts  credit-applications.module.ts  credit-applications.service.ts
backend/src/risk/: risk.controller.ts  risk.module.ts  risk.service.ts
docs/: api_contracts.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/hooks/: useAgeFromBirthdate.ts  useAtTop.ts
frontend/src/lib/: api-client.ts
ml-credit/: README.md  pyproject.toml
ml-credit/src/ml_credit/: __init__.py  api.py  diccionario.py  inference.py  score.py  shap_explain.py  translate.py
ml-letter/src/ml_letter/: __init__.py  api.py  config.py  generator.py  llm_client.py  prompts.py  rag_policies.py  safety.py
notebooks/: 01_credit_eda_training.ipynb  02_credit_letter_generate.ipynb  02_credit_letter_generate_v1.ipynb  02_credit_letter_generate_v2.ipynb  requirements.txt
services/credit-api/: Dockerfile  README.md
services/credit-api/app/: main.py
services/letter-api/: Dockerfile
(+46 files in other folders)
