[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-credit"
version = "0.1.0"
description = "Credit scoring and explainability microservice"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "shap",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ml_credit"]

